issue with css on blogs and projetcs displayed

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SimeonDev - Build. Hack. Learn.</title>
-    <meta name="description" content="SimeNova - AI & Cybersecurity Explorer | Turning ideas into code with advanced machine learning, blockchain, and security solutions">
-    <meta name="keywords" content="AI, Machine Learning, Cybersecurity, Web Development, Blockchain, Portfolio, SimeNova">
-    <meta name="author" content="SimeNova">
+    <title>SimeonDevv - Build. Hack. Learn.</title>
+    <meta name="description" content="SimeonDev - AI & Cybersecurity Explorer | Turning ideas into code with advanced machine learning, blockchain, and security solutions">
+    <meta name="keywords" content="AI, Machine Learning, Cybersecurity, Web Development, Blockchain, Portfolio, SimeonDev">
+    <meta name="author" content="SimeonDev">
     
     <!-- CSS Modules -->
     <link rel="stylesheet" href="css/theme.css">
@@ -36,7 +36,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="#" class="logo" onclick="showPage('home')">SimeNova</a>
+            <a href="#" class="logo" onclick="showPage('home')">SimeonDev</a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" onclick="showPage('home')">Home</a></li>
                 <li><a href="#" onclick="showPage('projects')">Projects</a></li>
@@ -62,12 +62,12 @@
                     <div class="profile-section">
                         <div class="profile-pic-container">
                             <div class="profile-pic">
-                                <img src="images/profile.jpg" alt="SimeNova Profile Picture" loading="lazy">
+                                <img src="images/profile.jpg" alt="SimeonDev Profile Picture" loading="lazy">
                                 <div class="online-status"></div>
                             </div>
                         </div>
                         <div class="profile-info">
-                            <h1>SimeonDev</h1>
+                            <h1>SimeonDevv</h1>
                             <p class="tagline">🔧 Build. Hack. Learn.</p>
                             <p class="description">Turning ideas into code | AI & Cybersecurity Explorer</p>
                             <div class="profile-stats">
@@ -134,10 +134,10 @@
                                 Explores all possible game board states in a simulation-heavy environment and calculates hash values efficiently. Solved a major performance bottleneck using memory-safe Rust to bring runtime below 200ms.
                             </div>
                             <div class="project-links">
-                                <a href="https://github.com/simenova/cephalopods-ai-solver" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <a href="https://github.com/SimeonDev/cephalopods-ai-solver" target="_blank" rel="noopener noreferrer" class="project-link">
                                     <span class="link-icon">🔗</span> GitHub
                                 </a>
-                                <button class="project-link" onclick="showDemoMessage('Cephalopods AI Solver', 'https://github.com/simenova/cephalopods-ai-solver')">
+                                <button class="project-link" onclick="showDemoMessage('Cephalopods AI Solver', 'https://github.com/SimeonDev/cephalopods-ai-solver')">
                                     <span class="link-icon">📺</span> Demo
                                 </button>
                                 <button class="project-link details-btn" onclick="showProjectDetails(1)">
@@ -157,10 +157,10 @@
                                 Intelligent vehicle maintenance system using LangChain and OpenAI API for predictive maintenance recommendations and automated scheduling.
                             </div>
                             <div class="project-links">
-                                <a href="https://github.com/simenova/vehicle-maintenance-ai" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <a href="https://github.com/SimeonDev/vehicle-maintenance-ai" target="_blank" rel="noopener noreferrer" class="project-link">
                                     <span class="link-icon">🔗</span> GitHub
                                 </a>
-                                <button class="project-link" onclick="showDemoMessage('AI-Powered Vehicle Maintenance Assistant', 'https://github.com/simenova/vehicle-maintenance-ai')">
+                                <button class="project-link" onclick="showDemoMessage('AI-Powered Vehicle Maintenance Assistant', 'https://github.com/SimeonDev/vehicle-maintenance-ai')">
                                     <span class="link-icon">📺</span> Demo
                                 </button>
                                 <button class="project-link details-btn" onclick="showProjectDetails(2)">
@@ -180,10 +180,10 @@
                                 WebSocket-based collaborative coding environment with syntax highlighting, real-time cursor tracking, and integrated chat system.
                             </div>
                             <div class="project-links">
-                                <a href="https://github.com/simenova/code-collab" target="_blank" rel="noopener noreferrer" class="project-link">
+                                <a href="https://github.com/SimeonDev/code-collab" target="_blank" rel="noopener noreferrer" class="project-link">
                                     <span class="link-icon">🔗</span> GitHub
                                 </a>
-                                <button class="project-link" onclick="showDemoMessage('Real-time Code Collaboration Tool', 'https://github.com/simenova/code-collab')">
+                                <button class="project-link" onclick="showDemoMessage('Real-time Code Collaboration Tool', 'https://github.com/SimeonDev/code-collab')">
                                     <span class="link-icon">📺</span> Demo
                                 </button>
                                 <button class="project-link details-btn" onclick="showProjectDetails(4)">
@@ -364,7 +364,7 @@
                         <h3>Contact Information</h3>
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
-                            <span>contact@simeondev.com</span>
+                            <span>contacSimeonDevdev.com</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">💬</span>
@@ -411,7 +411,7 @@
                 <div class="footer-content">
                     <!-- Brand Section -->
                     <div class="footer-brand">
-                        <h2 class="footer-logo">SimeNova</h2>
+                        <h2 class="footer-logo">SimeonDev</h2>
                         <p class="footer-tagline">Empowering Innovation Through Technology</p>
                         <p class="footer-description">
                             Turning complex ideas into elegant solutions through AI, cybersecurity, and cutting-edge development.
@@ -437,7 +437,7 @@
                                     <path fill="currentColor" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                                 </svg>
                             </a>
-                            <a href="https://kaggle.com/simenova" target="_blank" rel="noopener noreferrer" class="social-link kaggle" title="Kaggle">
+                            <a href="https://kaggle.com/SimeonDev" target="_blank" rel="noopener noreferrer" class="social-link kaggle" title="Kaggle">
                                 <svg viewBox="0 0 24 24" width="24" height="24">
                                     <path fill="currentColor" d="M18.825 23.859c-.022.092-.117.141-.281.141h-3.139c-.187 0-.351-.082-.492-.248l-5.178-6.589-1.448 1.374v5.111c0 .235-.117.352-.351.352H5.505c-.236 0-.354-.117-.354-.352V.353c0-.233.118-.353.354-.353h2.431c.234 0 .351.12.351.353v14.343l6.203-6.272c.165-.165.33-.246.495-.246h3.239c.144 0 .236.06.285.18.046.149.034.255-.036.315l-6.555 6.344 6.836 8.507c.095.104.117.208.07.336"/>
                                 </svg>
@@ -482,7 +482,7 @@
                 <!-- Footer Bottom -->
                 <div class="footer-bottom">
                     <div class="footer-bottom-content">
-                        <p>&copy; 2025 SimeonDev. All rights reserved.</p>
+                        <p>&copy; 2025 SimeonDevv. All rights reserved.</p>
                         <div class="footer-bottom-links">
                             <a href="#" onclick="showPrivacyPolicy()">Privacy Policy</a>
                             <a href="#" onclick="showTermsOfService()">Terms of Service</a>
