Fix: Add cache-busting for CSS files - force browser to reload about-enhanced.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/project-cards-minimal.css"> <!-- 7. Minimalist Project Cards -->
     <link rel="stylesheet" href="css/project-modal.css">   <!-- 8. Project Details Modal -->
     <link rel="stylesheet" href="css/skills-enhanced.css">  <!-- 9. Enhanced Skills Section -->
-    <link rel="stylesheet" href="css/about-enhanced.css">  <!-- 10. Enhanced About Page -->
+    <link rel="stylesheet" href="css/about-enhanced.css?v=20251112">  <!-- 10. Enhanced About Page -->
     <link rel="stylesheet" href="css/services-enhanced.css"> <!-- 11. Enhanced Services Page -->
     <link rel="stylesheet" href="css/contact-enhanced.css"> <!-- 12. Enhanced Contact Page -->
     <link rel="stylesheet" href="css/footer.css">          <!-- 13. Footer -->
