Fix: Aggressive cache-busting - add version params to ALL CSS files

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <!-- ============================================ -->
     <!-- TECH PURPLE THEME - CSS IN CORRECT ORDER -->
     <!-- ============================================ -->
-    <link rel="stylesheet" href="css/theme.css">           <!-- 1. Variables -->
-    <link rel="stylesheet" href="css/typography.css">      <!-- 2. Typography -->
-    <link rel="stylesheet" href="css/layouts.css">         <!-- 3. Layouts -->
-    <link rel="stylesheet" href="css/components.css">      <!-- 4. Components -->
-    <link rel="stylesheet" href="css/navigation.css">      <!-- 5. Navigation -->
-    <link rel="stylesheet" href="css/hero-2025.css">       <!-- 6. Modern Hero 2025 -->
-    <link rel="stylesheet" href="css/project-cards-minimal.css"> <!-- 7. Minimalist Project Cards -->
-    <link rel="stylesheet" href="css/project-modal.css">   <!-- 8. Project Details Modal -->
-    <link rel="stylesheet" href="css/skills-enhanced.css">  <!-- 9. Enhanced Skills Section -->
-    <link rel="stylesheet" href="css/about-enhanced.css?v=20251112">  <!-- 10. Enhanced About Page -->
-    <link rel="stylesheet" href="css/services-enhanced.css"> <!-- 11. Enhanced Services Page -->
-    <link rel="stylesheet" href="css/contact-enhanced.css"> <!-- 12. Enhanced Contact Page -->
-    <link rel="stylesheet" href="css/footer.css">          <!-- 13. Footer -->
-    <link rel="stylesheet" href="css/animations.css">      <!-- 14. Animations -->
-    <link rel="stylesheet" href="css/utilities.css">       <!-- 15. Utilities -->
-    <link rel="stylesheet" href="css/responsive.css">      <!-- 16. Responsive -->
-    <link rel="stylesheet" href="css/main.css">            <!-- 17. Main base styles -->
-    <link rel="stylesheet" href="css/sections.css">        <!-- 18. Section layouts -->
+    <link rel="stylesheet" href="css/theme.css?v=20251112">           <!-- 1. Variables -->
+    <link rel="stylesheet" href="css/typography.css?v=20251112">      <!-- 2. Typography -->
+    <link rel="stylesheet" href="css/layouts.css?v=20251112">         <!-- 3. Layouts -->
+    <link rel="stylesheet" href="css/components.css?v=20251112">      <!-- 4. Components -->
+    <link rel="stylesheet" href="css/navigation.css?v=20251112">      <!-- 5. Navigation -->
+    <link rel="stylesheet" href="css/hero-2025.css?v=20251112">       <!-- 6. Modern Hero 2025 -->
+    <link rel="stylesheet" href="css/project-cards-minimal.css?v=20251112"> <!-- 7. Minimalist Project Cards -->
+    <link rel="stylesheet" href="css/project-modal.css?v=20251112">   <!-- 8. Project Details Modal -->
+    <link rel="stylesheet" href="css/skills-enhanced.css?v=20251112">  <!-- 9. Enhanced Skills Section -->
+    <link rel="stylesheet" href="css/about-enhanced.css?v=20251112b">  <!-- 10. Enhanced About Page -->
+    <link rel="stylesheet" href="css/services-enhanced.css?v=20251112"> <!-- 11. Enhanced Services Page -->
+    <link rel="stylesheet" href="css/contact-enhanced.css?v=20251112"> <!-- 12. Enhanced Contact Page -->
+    <link rel="stylesheet" href="css/footer.css?v=20251112">          <!-- 13. Footer -->
+    <link rel="stylesheet" href="css/animations.css?v=20251112">      <!-- 14. Animations -->
+    <link rel="stylesheet" href="css/utilities.css?v=20251112">       <!-- 15. Utilities -->
+    <link rel="stylesheet" href="css/responsive.css?v=20251112">      <!-- 16. Responsive -->
+    <link rel="stylesheet" href="css/main.css?v=20251112">            <!-- 17. Main base styles -->
+    <link rel="stylesheet" href="css/sections.css?v=20251112">        <!-- 18. Section layouts -->
 
     <!-- ============================================ -->
     <!-- SUPABASE JS SDK - Load BEFORE your scripts -->
